# Liquifusion_AI

./: Cargo.toml  README.md  canister_ids.json  dfx.json  generate_did.sh  package-lock.json  package.json  script.sh  tsconfig.json
src/freelance_backend/: Cargo.toml  freelance_backend.did
src/freelance_backend/src/: lib.rs
src/freelance_frontend/: index.html  package.json  vite.config.js
src/freelance_frontend/src/: App.css  App.jsx  auth.js  index.scss  main.jsx
src/freelance_frontend/src/components/: AdminDashboard.jsx  ClientDashboard.css  ClientDashboard.jsx  FreelanceDashboard.css  FreelancerDashboard.jsx  RiskMonitor.jsx  TradingDashboard.jsx  chat.jsx
